suttipad rodhom
schema.prisma V.01
Update: 13/2/2569

[Change Log]
- เพิ่มตาราง "Review" สำหรับระบบรีวิวผู้ใช้งาน [17:05|13/2/2569]
- เพิ่มความสัมพันธ์ระหว่าง Review กับ Booking (bookingId) [17:12|13/2/2569]
- เพิ่มความสัมพันธ์ระหว่าง Review กับ User (reviewerId) [17:18|13/2/2569]
- เพิ่มความสัมพันธ์ระหว่าง Review กับ User (reviewedUserId) [17:24|13/2/2569]
- เพิ่ม index สำหรับ reviewedUserId และ reviewerId ในตาราง Review [17:30|13/2/2569]
- อัปเดต Model User ให้รองรับ reviewsGiven และ reviewsReceived [17:36|13/2/2569]
- อัปเดต Model Booking ให้รองรับความสัมพันธ์กับ Review [17:42|13/2/2569]

suttipad rodhom
ReviewModal.vue V.01
Update: 14/2/2567

[Change Log]
- สร้างหน้า Modal สำหรับให้คะแนนคนขับ (Driver Review UI) [17:00|14/2/2569]
- เพิ่มการแสดงรูปโปรไฟล์คนขับ (รองรับ URL เต็ม และไฟล์จาก backend) [17:08|14/2/2569]
- เพิ่ม fallback รูปโปรไฟล์ด้วย ui-avatars กรณีไม่มีรูป [17:12|14/2/2569]
- แสดงชื่อคนขับจาก trip.driver พร้อม fallback เป็น "คนขับ" [17:15|14/2/2569]
- เพิ่มส่วนให้คะแนนแบบ 5 ดาว [17:20|14/2/2569]
- เพิ่ม textarea สำหรับเขียนรีวิวเพิ่มเติม (ไม่บังคับ) [17:25|14/2/2569]
- เพิ่มส่วนอัปโหลดรูปภาพประกอบรีวิว (UI) [17:32|14/2/2569]
- เพิ่มปุ่ม "ยกเลิก" และ "ส่งรีวิว" [17:38|14/2/2569]
- ใช้ computed() สำหรับจัดการรูปโปรไฟล์คนขับ [17:45|14/2/2569]
- ปรับ style และจัด layout ให้เป็น modal กลางหน้าจอ [17:55|14/2/2569]


