@@ -27,5 +27,10 @@ Update: 14/2/2567
 - ใช้ computed() สำหรับจัดการรูปโปรไฟล์คนขับ [17:45|14/2/2569]
 - ปรับ style และจัด layout ให้เป็น modal กลางหน้าจอ [17:55|14/2/2569]
 
+suttipad rodhom
+ReviewModal.vue V.02
+Update: 14/2/2567
 
+[Change Log]
+- เพิ่มฟีเจอร์ hover คลิกให้คะแนนดาว และสามารถแสดงผลแบบตาม mouse ได้ [18.42|14/2/2569]
 
